--- a/404.html
+++ b/404.html
@@ -16,10 +16,13 @@
     <link rel="stylesheet" type="text/css" href="./style/css/404.css">
 </head>
 <body>
-<main class="unselectable">
+<main class="main unselectable">
     <h1>别看了, 啥也没有!</h1>
     <p><em>要么你不够酷, 无法访问此网页, 要么它不存在!</em></p>
-    <a href="/">返回首页</a>
+    <a id="return" href="/">返回首页</a>
 </main>
+<footer class="footer unselectable ">
+    &copy; 2024 Make By <a href="/" target="_blank">BD3QIF</a>
+</footer>
 </body>
 </html>
